--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <ol>
             <li><strong>Open the App:</strong><br> Launch the game on your device.</li>
             <li><strong>Navigate to Account Settings:</strong><br> Go to the main menu and select the "Settings" option.<br>
-                <img src="URL_to_screenshot1" alt="Screenshot of main menu">
+                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/screenshot3.jpg?raw=true" alt="Screenshot of main menu">
             </li>
             <li><strong>Select "Delete Account":</strong><br> In the settings menu, find and select the "Delete Account" option.<br>
-                <img src="URL_to_screenshot2" alt="Screenshot of settings menu">
+                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/scrrenshot2.jpg?raw=true" alt="Screenshot of settings menu">
             </li>
             <li><strong>Confirm Deletion:</strong><br> Follow the on-screen instructions to confirm the deletion of your account.<br>
-                <img src="URL_to_screenshot3" alt="Screenshot of delete account confirmation">
+                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/screenshot1.jpg?raw=true" alt="Screenshot of delete account confirmation">
             </li>
         </ol>
 
