--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="https://github.com/TaherML1/account-deletion-page/blob/main/scrrenshot2.jpg?raw=true" alt="Screenshot of settings menu">
             </li>
             <li><strong>Confirm Deletion:</strong><br> Follow the on-screen instructions to confirm the deletion of your account.<br>
-                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/screenshot1.jpg?raw=true" alt="Screenshot of delete account confirmation">
+                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/screenshot1.jpg" alt="Screenshot of delete account confirmation">
             </li>
         </ol>
 
