--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .container { max-width: 800px; margin: 0 auto; }
         h1 { color: #333; }
         p, ol, li { font-size: 16px; color: #555; }
-        img { max-width: 100%; height: auto; }
+        img { max-width: 100%; height: auto; margin-bottom: 20px; }
     </style>
 </head>
 <body>
@@ -21,13 +21,13 @@
         <ol>
             <li><strong>Open the App:</strong><br> Launch the game on your device.</li>
             <li><strong>Navigate to Account Settings:</strong><br> Go to the main menu and select the "Settings" option.<br>
-                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/screenshot3.jpg?raw=true" alt="Screenshot of main menu">
+                <img src="screenshot1.jpg" alt="Screenshot of main menu">
             </li>
             <li><strong>Select "Delete Account":</strong><br> In the settings menu, find and select the "Delete Account" option.<br>
-                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/scrrenshot2.jpg?raw=true" alt="Screenshot of settings menu">
+                <img src="scrrenshot2.jpg" alt="Screenshot of settings menu">
             </li>
             <li><strong>Confirm Deletion:</strong><br> Follow the on-screen instructions to confirm the deletion of your account.<br>
-                <img src="https://github.com/TaherML1/account-deletion-page/blob/main/screenshot1.jpg" alt="Screenshot of delete account confirmation">
+                <img src="screenshot3.jpg" alt="Screenshot of delete account confirmation">
             </li>
         </ol>
 
