--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         h1 { color: #333; }
         p, ol, li { font-size: 16px; color: #555; }
         img { max-width: 100%; height: auto; margin-bottom: 20px; }
-        .small-img { max-width: 50%; height: auto; }
+        .small-img { max-width: 20%; height: auto; }
     </style>
 </head>
 <body>
@@ -22,13 +22,13 @@
         <ol>
             <li><strong>Open the App:</strong><br> Launch the game on your device.</li>
             <li><strong>Navigate to Account Settings:</strong><br> Go to the main menu and select the "Settings" option.<br>
-                <img src="screenshot3.jpg" alt="Screenshot of main menu" class="small-img">
+                <img src="screenshot1.jpg" alt="Screenshot of main menu" class="small-img">
             </li>
-            <li><strong>Select "Setting Button":</strong><br> In the settings menu, find and select the "Delete Account" option.<br>
+            <li><strong>Select "Delete Account":</strong><br> In the settings menu, find and select the "Delete Account" option.<br>
                 <img src="scrrenshot2.jpg" alt="Screenshot of settings menu" class="small-img">
             </li>
             <li><strong>Confirm Deletion:</strong><br> Follow the on-screen instructions to confirm the deletion of your account.<br>
-                <img src="screenshot1.jpg" alt="Screenshot of delete account confirmation" class="small-img">
+                <img src="screenshot3.jpg" alt="Screenshot of delete account confirmation" class="small-img">
             </li>
         </ol>
 
