--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         h1 { color: #333; }
         p, ol, li { font-size: 16px; color: #555; }
         img { max-width: 100%; height: auto; margin-bottom: 20px; }
-        .small-img { max-width: 35%; height: auto; }
+        .small-img { max-width: 45%; height: auto; }
     </style>
 </head>
 <body>
@@ -22,23 +22,23 @@
         <ol>
             <li><strong>Open the App:</strong><br> Launch the game on your device.</li>
             <li><strong>Navigate to Account Settings:</strong><br> Go to the main menu and select the "Settings" option.<br>
-                <img src="screenshot1.jpg" alt="Screenshot of main menu" class="small-img">
+                <img src="screenshot3.jpg" alt="Screenshot of main menu" class="small-img">
             </li>
             <li><strong>Select "Delete Account":</strong><br> In the settings menu, find and select the "Delete Account" option.<br>
                 <img src="scrrenshot2.jpg" alt="Screenshot of settings menu" class="small-img">
             </li>
             <li><strong>Confirm Deletion:</strong><br> Follow the on-screen instructions to confirm the deletion of your account.<br>
-                <img src="screenshot3.jpg" alt="Screenshot of delete account confirmation" class="small-img">
+                <img src="screenshot1.jpg" alt="Screenshot of delete account confirmation" class="small-img">
             </li>
         </ol>
 
         <h2>Email Request for Account Deletion:</h2>
-        <p>If you prefer to request account deletion via email, please send an email to <a href="mailto:support@yourwebsite.com">support@yourwebsite.com</a> with your account details and a request for account deletion.</p>
+        <p>If you prefer to request account deletion via email, please send an email to <a href="mailto:taherml2024@gmail.com">support@yourwebsite.com</a> with your account details and a request for account deletion.</p>
 
         <h2>Data Deletion Policy:</h2>
         <p>All personal data, including your username, game progress, and any in-app purchases, will be permanently deleted from our servers. We retain minimal data required for compliance with legal obligations for up to 30 days.</p>
 
-        <p>For any questions or assistance, please contact our support team at <a href="mailto:support@yourwebsite.com">support@yourwebsite.com</a>.</p>
+       
     </div>
 </body>
 </html>
