--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ol>
 
         <h2>Email Request for Account Deletion:</h2>
-        <p>If you prefer to request account deletion via email, please send an email to <a href="mailto:taherml2024@gmail.com">support@yourwebsite.com</a> with your account details and a request for account deletion.</p>
+        <p>If you prefer to request account deletion via email, please send an email to <a href="mailto:taherml2024@gmail.com">taherml2024@gmail.com</a> with your account details and a request for account deletion.</p>
 
         <h2>Data Deletion Policy:</h2>
         <p>All personal data, including your username, game progress, and any in-app purchases, will be permanently deleted from our servers. We retain minimal data required for compliance with legal obligations for up to 30 days.</p>
