--- a/index.html
+++ b/index.html
@@ -1,44 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Your Account</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; }
-        .container { max-width: 800px; margin: 0 auto; }
-        h1 { color: #333; }
-        p, ol, li { font-size: 16px; color: #555; }
-        img { max-width: 100%; height: auto; margin-bottom: 20px; }
-        .small-img { max-width: 35%; height: auto; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Delete Your Account</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9fb;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 30px;
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
+    }
+
+    h1, h2 {
+      color: #2c3e50;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 30px;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+
+    ol {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 15px;
+    }
+
+    .small-img {
+      display: block;
+      max-width: 300px;
+      height: auto;
+      margin: 10px 0 20px 0;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    }
+
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px;
+        margin: 20px;
+      }
+
+      .small-img {
+        max-width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Delete Your Account</h1>
-        <p>If you wish to delete your account and all associated data from our game, please follow the steps below. We have included screenshots to guide you through the process.</p>
-        
-        <h2>Steps to Delete Your Account In-App:</h2>
-        <ol>
-            <li><strong>Open the App:</strong><br> Launch the game on your device.</li>
-            <li><strong>Navigate to Account Settings:</strong><br> Go to the main menu and select the "Settings" option.<br>
-                <img src="screenshot3.jpg" alt="Screenshot of main menu" class="small-img">
-            </li>
-            <li><strong>Select "Delete Account":</strong><br> In the settings menu, find and select the "Delete Account" option.<br>
-                <img src="scrrenshot2.jpg" alt="Screenshot of settings menu" class="small-img">
-            </li>
-            <li><strong>Confirm Deletion:</strong><br> Follow the on-screen instructions to confirm the deletion of your account.<br>
-                <img src="screenshot1.jpg" alt="Screenshot of delete account confirmation" class="small-img">
-            </li>
-        </ol>
+  <div class="container">
+    <h1>Delete Your Account</h1>
+    <p>
+      If you wish to delete your account and all associated data from our game, please follow the steps below. We have included screenshots to guide you through the process.
+    </p>
 
-        <h2>Email Request for Account Deletion:</h2>
-        <p>If you prefer to request account deletion via email, please send an email to <a href="mailto:taherml2024@gmail.com">taherml2024@gmail.com</a> with your account details and a request for account deletion.</p>
+    <h2>Steps to Delete Your Account In-App:</h2>
+    <ol>
+      <li>
+        <strong>Open the App:</strong><br>
+        Launch the game on your device.
+           <img src="screenshot1.jpg" alt="Screenshot of main menu" class="small-img">
+      </li>
+      <li>
+        <strong>Navigate to Account Settings:</strong><br>
+        Go to the profile screen and select the "Settings" option.<br>
+        <img src="screenshot2.jpg" alt="Screenshot of main menu" class="small-img">
+      </li>
+      <li>
+        <strong>Select "Delete Account":</strong><br>
+        In the settings menu, find and select the "Delete Account" option.<br>
+        <img src="scrrenshot3.jpg" alt="Screenshot of settings menu" class="small-img">
+      </li>
+      <li>
+        <strong>Confirm Deletion:</strong><br>
+        Follow the on-screen instructions to confirm the deletion of your account.<br>
+        <img src="screenshot4.jpg" alt="Screenshot of delete account confirmation" class="small-img">
+      </li>
+    </ol>
 
-        <h2>Data Deletion Policy:</h2>
-        <p>All personal data, including your username, game progress, and any in-app purchases, will be permanently deleted from our servers. We retain minimal data required for compliance with legal obligations for up to 30 days.</p>
+    <h2>Email Request for Account Deletion:</h2>
+    <p>
+      If you prefer to request account deletion via email, please send a message to
+      <a href="mailto:taherml2024@gmail.com">taherml2024@gmail.com</a> with your account details and a request for account deletion.
+    </p>
 
-       
-    </div>
+    <h2>Data Deletion Policy:</h2>
+    <p>
+      All personal data, including your username, game progress, and any in-app purchases, will be permanently deleted from our servers. We retain minimal data required for compliance with legal obligations for up to 30 days.
+    </p>
+  </div>
 </body>
 </html>
