--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     .small-img {
       flex: 1 1 250px;
-      max-width: 100%;
+     max-width: 300px;
       height: auto;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
@@ -329,14 +329,7 @@
           After you initiate deletion, we will permanently remove all your personal data from our servers within 30 days. Some anonymized gameplay data may be retained for analytical purposes as outlined in our <a href="#">Privacy Policy</a>.
         </p>
         
-        <div class="flex-group animate delay-4">
-          <a href="#" class="btn btn-danger">
-            I Understand - Delete My Account
-          </a>
-          <a href="#" class="btn">
-            Cancel and Go Back
-          </a>
-        </div>
+      
       </div>
     </div>
   </div>
