--- a/index.html
+++ b/index.html
@@ -138,12 +138,11 @@
       margin-right: 0.5rem;
     }
 
-    .img-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      margin: 1.5rem 0;
-    }
+   .img-container {
+  display: grid;
+  place-items: center; /* Super easy centering with grid */
+  margin: 1.5rem 0;
+}
 
     .small-img {
       flex: 1 1 250px;
