--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
         <h2 class="animate delay-3">What Happens Next?</h2>
         <p class="animate delay-4">
-          After you initiate deletion, we will permanently remove all your personal data from our servers within 30 days. Some anonymized gameplay data may be retained for analytical purposes as outlined in our <a href="#">Privacy Policy</a>.
+          After you initiate deletion, we will permanently remove all your personal data from our servers within 30 days. Some anonymized gameplay data may be retained for analytical purposes as outlined in our <a href="https://www.freeprivacypolicy.com/live/fe1c546f-27be-4568-aeba-c8602427fa40">Privacy Policy</a>.
         </p>
         
       
