Replace placeholder images with actual screenshots

--- a/index.html
+++ b/index.html
@@ -300,28 +300,30 @@
             Launch <strong>صراع الكلمات</strong> on your device and make sure you're logged in.
             <div class="img-container">
               <!-- Replaced image src with descriptive text for now -->
-              <div class="small-img">(Screenshot 1: App home screen)</div>
+           <div class="img-container">
+  <img src="screenshot1.jpg" alt="App home screen" class="small-img">
+</div>
             </div>
           </li>
           <li class="animate delay-3">
             <strong>Access Account Settings</strong><br>
             Navigate to your profile section and tap on the settings icon (usually in a corner).
             <div class="img-container">
-              <div class="small-img">(Screenshot 2: Profile screen showing settings icon)</div>
+              <div class="small-img"><img src="screenshot2.jpg" alt="Profile screen" class="small-img"></div>
             </div>
           </li>
           <li class="animate delay-3">
             <strong>Select Delete Account</strong><br>
             In the settings menu, scroll down to find the "Delete Account" option and tap on it.
             <div class="img-container">
-              <div class="small-img">(Screenshot 3: Settings menu highlighting Delete Account)</div>
+              <div class="small-img"><img src="screenshot3.jpg" alt="Settings menu" class="small-img"></div>
             </div>
           </li>
           <li class="animate delay-4">
             <strong>Confirm Deletion</strong><br>
             Follow the on-screen prompts carefully to confirm that you want to permanently delete your account.
             <div class="img-container">
-              <div class="small-img">(Screenshot 4: Delete confirmation dialog)</div>
+              <div class="small-img"><img src="screenshot4.jpg" alt="Delete confirmation" class="small-img"></div>
             </div>
           </li>
         </ol>
